--- a/aula010/ex007.html
+++ b/aula010/ex007.html
@@ -21,9 +21,12 @@
     <h1>Somando Valores</h1>
     <input type="number" name="textn1" id="textn1"> + 
     <input type="number" name="textn2" id="textn2">
-    <input type="button" value="Somar" onclick="somar()">
+    <input type="button" value="Somar" id="button">
     <div id="res">Resultado</div>
     <script>
+        var button = window.document.getElementById('button')
+        button.addEventListener('click', somar)
+
         function somar() {
             var tn1 = window.document.getElementById('textn1')
             var tn2 = window.document.querySelector('input#textn2')
@@ -31,7 +34,7 @@
             var n1 = Number(tn1.value)
             var n2 = Number(tn2.value)
             var soma = n1 + n2
-            res.innerHTML = `A soma entre ${n1} e ${n2} é igual a ${soma}`
+            res.innerHTML = `A soma entre ${n1} e ${n2} é igual a <strong>${soma}</strong>`
         }
     </script>
 </body>
