EX JS 004 Finalizado

--- a/aula014ex/ex017/modelo.html
+++ b/aula014ex/ex017/modelo.html
@@ -19,7 +19,9 @@
             </p>
         </div>
         <div id="res">
-            <textarea name="tabu" id="tabu" cols="30" rows="20" placeholder="Digite um número acima"></textarea>
+            <select name="table" id="table" size="9">
+                <option value="opt1">Digite um número acima</option>
+            </select>
         </div>
     </section>
     <footer>
